--- a/session19/sudoku/mainwindow.ui
+++ b/session19/sudoku/mainwindow.ui
@@ -6,18 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>383</width>
-    <height>404</height>
+    <width>416</width>
+    <height>467</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>puuzzle 15</string>
   </property>
   <property name="windowOpacity">
-   <double>-11.000000000000000</double>
+   <double>1.000000000000000</double>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(4, 4, 4);</string>
+  </property>
+  <property name="animated">
+   <bool>true</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
@@ -31,7 +34,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -52,7 +57,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -73,7 +80,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -94,7 +103,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -115,7 +126,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -136,7 +149,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -157,7 +172,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -178,7 +195,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -199,7 +218,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -220,7 +241,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -241,7 +264,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -262,7 +287,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -283,7 +310,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -304,7 +333,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -325,7 +356,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
@@ -346,7 +379,9 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>14</pointsize>
+        <family>Segoe Print</family>
+        <pointsize>18</pointsize>
+        <bold>true</bold>
        </font>
       </property>
       <property name="styleSheet">
